--- a/base64/base64.csproj
+++ b/base64/base64.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{232DFD0C-7AE9-4E2A-83A0-82179047C330}</ProjectGuid>
+    <ProjectGuid>{53707D1F-4D70-4A2F-A725-C204AEE72A33}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Ul</RootNamespace>
-    <AssemblyName>Ul</AssemblyName>
+    <RootNamespace>base64</RootNamespace>
+    <AssemblyName>base64</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -46,7 +46,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Bee.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -55,9 +54,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Queen.cs" />
-    <Compile Include="StingPatrol.cs" />
-    <Compile Include="Worker.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
