--- a/Kurs walut - email/Kurs walut - email.csproj
+++ b/Kurs walut - email/Kurs walut - email.csproj
@@ -82,7 +82,9 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="http.cs" />
     <Compile Include="json.cs" />
+    <Compile Include="mail.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
